k8s/apps/home-assistant/base/home-assistant-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app: home-assistant
    role: home-assistant
spec:
  serviceName: home-assistant
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
      role: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
        role: home-assistant
    spec:
      containers:
        - name: home-assistant
          # find container versions/tags at https://registry.hub.docker.com/r/homeassistant/home-assistant/tags
          image: homeassistant/home-assistant:2023.8

          resources:
            limits:
              memory: "2Gi"
            requests:
              memory: "450Mi"

          securityContext:
            # HASS marked the docker container privileged at https://www.home-assistant.io/installation/alternative/#docker-compose
            privileged: true

          # container-level volume mounts:
          volumeMounts:
            # apparently the zigbee integration finds it at ttyUSB1?
            - mountPath: /dev/ttyUSB1
              name: zigbee-device
            - mountPath: /config
              name: hass-config
            - mountPath: /etc/letsencrypt
              name: certificates
              readOnly: true

          ports:
            # port for web interface
            - name: web-ui
              containerPort: 8123

      # pod-level volumes:
      volumes:
        - name: zigbee-device
          hostPath:
            # Do not use /dev/ttyUSBX serial devices, as those mappings can change over time.
            # Instead, use the /dev/serial/by-id/X serial device for your Z-Wave stick.
            path: "/dev/serial/by-id/usb-Silicon_Labs_HubZ_Smart_Home_Controller_C1301B96-if01-port0"
        - name: hass-config
          hostPath:
            path: /mnt/thedatapool/app-data/home-assistant
        - name: certificates
          hostPath:
            path: /mnt/thedatapool/app-data/letsencrypt
