k8s/apps/home-assistant/base/home-assistant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  type: LoadBalancer
  ports:
    # the port that this service should serve on
    - port: 8123
  selector:
    app: home-assistant
    role: zwavejs
