k8s/apps/home-assistant/base/zwavejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zwavejs
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  type: LoadBalancer
  ports:
    # port for web interface
    - name: web-ui
      port: 8091
    # port for Z-Wave JS websocket server
    - name: websocket
      port: 3000
  selector:
    app: home-assistant
    role: zwavejs
